# jerro

jerro_description/: package.xml  setup.cfg  setup.py
jerro_description/launch/: jerro_description.launch.py
jerro_description/urdf/: jerro.urdf
jerro_drivers/: CMakeLists.txt  MOTOR_CONTROL_GUIDE.md  README.md  package.xml
jerro_drivers/config/: motor_pid_config.yaml  pid_gains.yaml
jerro_drivers/include/jerro_drivers/: exponential_filter.hpp  oscillation_detector.hpp  pid_controller.hpp
jerro_drivers/launch/: motor_control.launch.py
jerro_drivers/src/: RED.cpp  RED.h  centrale_inertielle.cpp  encoder_publisher.cpp  motor_pid_controller.cpp  servomoteur.cpp  test_RED_dual.cpp
jerro_msgs/: CMakeLists.txt  package.xml
jerro_msgs/action/: AutoTunePID.action  StartScan.action
jerro_msgs/msg/: MotorSpeed.msg
jerro_msgs/srv/: AssembleCloud.srv  SetServoPos.srv  ToggleServomotor.srv
